// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDK Pipeline Py Unit Tests Custom AppEntrypoint 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/cdk.json linguist-generated
/requirements-dev.txt linguist-generated
/requirements.txt linguist-generated",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
/.env
!/requirements.txt
!/requirements-dev.txt
__pycache__/
*.py[cod]
*$py.class
*.so
.Python
build/
develop-eggs/
dist/
downloads/
eggs/
.eggs/
lib/
lib64/
parts/
sdist/
var/
wheels/
share/python-wheels/
*.egg-info/
.installed.cfg
*.egg
MANIFEST
*.manifest
*.spec
pip-log.txt
pip-delete-this-directory.txt
htmlcov/
.tox/
.nox/
.coverage
.coverage.*
.cache
nosetests.xml
coverage.xml
*.cover
*.py,cover
.hypothesis/
.pytest_cache/
cover/
*.mo
*.pot
*.log
local_settings.py
db.sqlite3
db.sqlite3-journal
instance/
.webassets-cache
.scrapy
docs/_build/
.pybuilder/
target/
.ipynb_checkpoints
profile_default/
ipython_config.py
__pypackages__/
celerybeat-schedule
celerybeat.pid
*.sage.py
.env
.venv
env/
venv/
ENV/
env.bak/
venv.bak/
.spyderproject
.spyproject
.ropeproject
/site
.mypy_cache/
.dmypy.json
dmypy.json
.pyre/
.pytype/

cython_debug/
!/cdk.json
/cdk.out/
.cdk.staging/
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "projen",
        "type": "devenv",
        "version": "99.99.99",
      },
      Object {
        "name": "pytest",
        "type": "devenv",
        "version": "6.2.1",
      },
      Object {
        "name": "aws_prototyping_sdk",
        "type": "runtime",
      },
      Object {
        "name": "aws-cdk-lib",
        "type": "runtime",
        "version": "^2.0.0",
      },
      Object {
        "name": "constructs",
        "type": "runtime",
        "version": "^10.0.5",
      },
      Object {
        "name": "pyhumps",
        "type": "runtime",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "cdk.json",
      "requirements-dev.txt",
      "requirements.txt",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "env": Object {
      "PATH": "$(echo $PWD/.env/bin:$PATH)",
      "VIRTUAL_ENV": "$(echo $PWD/.env)",
    },
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "clobber": Object {
        "condition": "git diff --exit-code > /dev/null",
        "description": "hard resets to HEAD of origin and cleans the local repo",
        "env": Object {
          "BRANCH": "$(git branch --show-current)",
        },
        "name": "clobber",
        "steps": Array [
          Object {
            "exec": "git checkout -b scratch",
            "name": "save current HEAD in \\"scratch\\" branch",
          },
          Object {
            "exec": "git checkout $BRANCH",
          },
          Object {
            "exec": "git fetch origin",
            "name": "fetch latest changes from origin",
          },
          Object {
            "exec": "git reset --hard origin/$BRANCH",
            "name": "hard reset to origin commit",
          },
          Object {
            "exec": "git clean -fdx",
            "name": "clean all untracked files",
          },
          Object {
            "say": "ready to rock! (unpushed commits are under the \\"scratch\\" branch)",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "python .projenrc.py",
          },
        ],
      },
      "deploy": Object {
        "description": "Deploys your CDK app to the AWS cloud",
        "name": "deploy",
        "steps": Array [
          Object {
            "exec": "cdk deploy",
          },
        ],
      },
      "destroy": Object {
        "description": "Destroys your cdk app in the AWS cloud",
        "name": "destroy",
        "steps": Array [
          Object {
            "exec": "cdk destroy",
          },
        ],
      },
      "diff": Object {
        "description": "Diffs the currently deployed app against your code",
        "name": "diff",
        "steps": Array [
          Object {
            "exec": "cdk diff",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "install": Object {
        "description": "Install and upgrade dependencies",
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
        "steps": Array [
          Object {
            "spawn": "synth:silent",
          },
        ],
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "synth": Object {
        "description": "Synthesizes your cdk app into cdk.out",
        "name": "synth",
        "steps": Array [
          Object {
            "exec": "cdk synth",
          },
        ],
      },
      "synth:silent": Object {
        "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of \\"yarn build\\")",
        "name": "synth:silent",
        "steps": Array [
          Object {
            "exec": "cdk synth -q",
          },
        ],
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
      "watch": Object {
        "description": "Watches changes in your source code and rebuilds and deploys to the current account",
        "name": "watch",
        "steps": Array [
          Object {
            "exec": "cdk deploy --hotswap",
          },
          Object {
            "exec": "cdk watch",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "cdk.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "app": "python updated.py",
    "output": "cdk.out",
    "watch": Object {
      "exclude": Array [
        "README.md",
        "cdk*.json",
        "requirements*.txt",
        "source.bat",
        "**/__init__.py",
        "python/__pycache__",
        "tests",
      ],
      "include": Array [
        "**",
      ],
    },
  },
  "custom_app_entrypoint/application_stack.py": "from aws_cdk import Stack

class ApplicationStack(Stack):
    def __init__(self, scope, id, **kwargs):
        super().__init__(scope, id, **kwargs)

        # TODO: Add resources
",
  "custom_app_entrypoint/application_stage.py": "from aws_cdk import Stage

from application_stack import ApplicationStack

class ApplicationStage(Stage):
    def __init__(self, scope, id, **kwargs):
        super().__init__(scope, id, **kwargs)

        ApplicationStack(self, 'MyApplication')
",
  "custom_app_entrypoint/pipeline.py": "import os
from aws_cdk import App, Environment
from pipeline_stack import PipelineStack
from application_stage import ApplicationStage

app = App()

pipelineStack = PipelineStack(app, \\"PipelineStack\\", env=Environment(
    account=os.environ[\\"CDK_DEFAULT_ACCOUNT\\"],
    region=os.environ[\\"CDK_DEFAULT_REGION\\"]
))

devStage = ApplicationStage(app, \\"Dev\\", env=Environment(
    account=os.environ[\\"CDK_DEFAULT_ACCOUNT\\"],
    region=os.environ[\\"CDK_DEFAULT_REGION\\"]
))

pipelineStack.pipeline.add_stage(devStage)

# Add additional stages here i.e. Prod

app.synth()
",
  "custom_app_entrypoint/pipeline_stack.py": "from aws_prototyping_sdk.aws_pdk_pipeline import PDKPipeline, SonarCodeScannerConfig
from aws_cdk import Stack, pipelines
import json
import humps

class PipelineStack(Stack):
    def __init__(self, scope, id, **kwargs):
        super().__init__(scope, id, **kwargs)

        context = self.node.try_get_context(\\"sonarqubeScannerConfig\\")
        repo_name = self.node.try_get_context(\\"repositoryName\\")
        sonar_config = None

        if repo_name is None:
            repo_name = \\"monorepo\\"

        if context is not None:
            sonar_config = SonarCodeScannerConfig(**json.loads(json.dumps(humps.decamelize(context))))

        self.pipeline = PDKPipeline(self, \\"Pipeline\\",
                                                 primary_synth_directory=\\"packages/infra/cdk.out\\",
                                                 repository_name=repo_name,
                                                 publish_assets_in_parallel=False,
                                                 cross_account_keys=True,
                                                 sonar_code_scanner_config=sonar_config,
                                                 synth=pipelines.ShellStep(\\"Unused\\", commands=[]))
",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
projen==99.99.99
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws_prototyping_sdk
aws-cdk-lib>=2.0.0, <3.0.0
constructs>=10.0.5, <11.0.0
pyhumps
",
  "tests/__init__.py": "",
  "tests/test_pipeline.py": "import pytest
from aws_cdk import App
from aws_cdk.assertions import Template

from custom_app_entrypoint.pipeline_stack import PipelineStack

@pytest.fixture(scope='module')
def template():
  app = App()
  stack = PipelineStack(app, \\"pipeline-stack-test\\")
  template = Template.from_stack(stack)
  yield template

def test_pipeline_found(template):
  template.resource_count_is(\\"AWS::CodePipeline::Pipeline\\", 1)
",
}
`;

exports[`PDK Pipeline Py Unit Tests Defaults 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/cdk.json linguist-generated
/requirements-dev.txt linguist-generated
/requirements.txt linguist-generated",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
/.env
!/requirements.txt
!/requirements-dev.txt
__pycache__/
*.py[cod]
*$py.class
*.so
.Python
build/
develop-eggs/
dist/
downloads/
eggs/
.eggs/
lib/
lib64/
parts/
sdist/
var/
wheels/
share/python-wheels/
*.egg-info/
.installed.cfg
*.egg
MANIFEST
*.manifest
*.spec
pip-log.txt
pip-delete-this-directory.txt
htmlcov/
.tox/
.nox/
.coverage
.coverage.*
.cache
nosetests.xml
coverage.xml
*.cover
*.py,cover
.hypothesis/
.pytest_cache/
cover/
*.mo
*.pot
*.log
local_settings.py
db.sqlite3
db.sqlite3-journal
instance/
.webassets-cache
.scrapy
docs/_build/
.pybuilder/
target/
.ipynb_checkpoints
profile_default/
ipython_config.py
__pypackages__/
celerybeat-schedule
celerybeat.pid
*.sage.py
.env
.venv
env/
venv/
ENV/
env.bak/
venv.bak/
.spyderproject
.spyproject
.ropeproject
/site
.mypy_cache/
.dmypy.json
dmypy.json
.pyre/
.pytype/

cython_debug/
!/cdk.json
/cdk.out/
.cdk.staging/
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "projen",
        "type": "devenv",
        "version": "99.99.99",
      },
      Object {
        "name": "pytest",
        "type": "devenv",
        "version": "6.2.1",
      },
      Object {
        "name": "aws_prototyping_sdk",
        "type": "runtime",
      },
      Object {
        "name": "aws-cdk-lib",
        "type": "runtime",
        "version": "^2.0.0",
      },
      Object {
        "name": "constructs",
        "type": "runtime",
        "version": "^10.0.5",
      },
      Object {
        "name": "pyhumps",
        "type": "runtime",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "cdk.json",
      "requirements-dev.txt",
      "requirements.txt",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "env": Object {
      "PATH": "$(echo $PWD/.env/bin:$PATH)",
      "VIRTUAL_ENV": "$(echo $PWD/.env)",
    },
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "clobber": Object {
        "condition": "git diff --exit-code > /dev/null",
        "description": "hard resets to HEAD of origin and cleans the local repo",
        "env": Object {
          "BRANCH": "$(git branch --show-current)",
        },
        "name": "clobber",
        "steps": Array [
          Object {
            "exec": "git checkout -b scratch",
            "name": "save current HEAD in \\"scratch\\" branch",
          },
          Object {
            "exec": "git checkout $BRANCH",
          },
          Object {
            "exec": "git fetch origin",
            "name": "fetch latest changes from origin",
          },
          Object {
            "exec": "git reset --hard origin/$BRANCH",
            "name": "hard reset to origin commit",
          },
          Object {
            "exec": "git clean -fdx",
            "name": "clean all untracked files",
          },
          Object {
            "say": "ready to rock! (unpushed commits are under the \\"scratch\\" branch)",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "python .projenrc.py",
          },
        ],
      },
      "deploy": Object {
        "description": "Deploys your CDK app to the AWS cloud",
        "name": "deploy",
        "steps": Array [
          Object {
            "exec": "cdk deploy",
          },
        ],
      },
      "destroy": Object {
        "description": "Destroys your cdk app in the AWS cloud",
        "name": "destroy",
        "steps": Array [
          Object {
            "exec": "cdk destroy",
          },
        ],
      },
      "diff": Object {
        "description": "Diffs the currently deployed app against your code",
        "name": "diff",
        "steps": Array [
          Object {
            "exec": "cdk diff",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "install": Object {
        "description": "Install and upgrade dependencies",
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
        "steps": Array [
          Object {
            "spawn": "synth:silent",
          },
        ],
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "synth": Object {
        "description": "Synthesizes your cdk app into cdk.out",
        "name": "synth",
        "steps": Array [
          Object {
            "exec": "cdk synth",
          },
        ],
      },
      "synth:silent": Object {
        "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of \\"yarn build\\")",
        "name": "synth:silent",
        "steps": Array [
          Object {
            "exec": "cdk synth -q",
          },
        ],
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
      "watch": Object {
        "description": "Watches changes in your source code and rebuilds and deploys to the current account",
        "name": "watch",
        "steps": Array [
          Object {
            "exec": "cdk deploy --hotswap",
          },
          Object {
            "exec": "cdk watch",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "cdk.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "app": "python defaults/pipeline.py",
    "output": "cdk.out",
    "watch": Object {
      "exclude": Array [
        "README.md",
        "cdk*.json",
        "requirements*.txt",
        "source.bat",
        "**/__init__.py",
        "python/__pycache__",
        "tests",
      ],
      "include": Array [
        "**",
      ],
    },
  },
  "defaults/application_stack.py": "from aws_cdk import Stack

class ApplicationStack(Stack):
    def __init__(self, scope, id, **kwargs):
        super().__init__(scope, id, **kwargs)

        # TODO: Add resources
",
  "defaults/application_stage.py": "from aws_cdk import Stage

from application_stack import ApplicationStack

class ApplicationStage(Stage):
    def __init__(self, scope, id, **kwargs):
        super().__init__(scope, id, **kwargs)

        ApplicationStack(self, 'MyApplication')
",
  "defaults/pipeline.py": "import os
from aws_cdk import App, Environment
from pipeline_stack import PipelineStack
from application_stage import ApplicationStage

app = App()

pipelineStack = PipelineStack(app, \\"PipelineStack\\", env=Environment(
    account=os.environ[\\"CDK_DEFAULT_ACCOUNT\\"],
    region=os.environ[\\"CDK_DEFAULT_REGION\\"]
))

devStage = ApplicationStage(app, \\"Dev\\", env=Environment(
    account=os.environ[\\"CDK_DEFAULT_ACCOUNT\\"],
    region=os.environ[\\"CDK_DEFAULT_REGION\\"]
))

pipelineStack.pipeline.add_stage(devStage)

# Add additional stages here i.e. Prod

app.synth()
",
  "defaults/pipeline_stack.py": "from aws_prototyping_sdk.aws_pdk_pipeline import PDKPipeline, SonarCodeScannerConfig
from aws_cdk import Stack, pipelines
import json
import humps

class PipelineStack(Stack):
    def __init__(self, scope, id, **kwargs):
        super().__init__(scope, id, **kwargs)

        context = self.node.try_get_context(\\"sonarqubeScannerConfig\\")
        repo_name = self.node.try_get_context(\\"repositoryName\\")
        sonar_config = None

        if repo_name is None:
            repo_name = \\"monorepo\\"

        if context is not None:
            sonar_config = SonarCodeScannerConfig(**json.loads(json.dumps(humps.decamelize(context))))

        self.pipeline = PDKPipeline(self, \\"Pipeline\\",
                                                 primary_synth_directory=\\"packages/infra/cdk.out\\",
                                                 repository_name=repo_name,
                                                 publish_assets_in_parallel=False,
                                                 cross_account_keys=True,
                                                 sonar_code_scanner_config=sonar_config,
                                                 synth=pipelines.ShellStep(\\"Unused\\", commands=[]))
",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
projen==99.99.99
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws_prototyping_sdk
aws-cdk-lib>=2.0.0, <3.0.0
constructs>=10.0.5, <11.0.0
pyhumps
",
  "tests/__init__.py": "",
  "tests/test_pipeline.py": "import pytest
from aws_cdk import App
from aws_cdk.assertions import Template

from defaults.pipeline_stack import PipelineStack

@pytest.fixture(scope='module')
def template():
  app = App()
  stack = PipelineStack(app, \\"pipeline-stack-test\\")
  template = Template.from_stack(stack)
  yield template

def test_pipeline_found(template):
  template.resource_count_is(\\"AWS::CodePipeline::Pipeline\\", 1)
",
}
`;

exports[`PDK Pipeline Py Unit Tests With Context 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/cdk.json linguist-generated
/requirements-dev.txt linguist-generated
/requirements.txt linguist-generated",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
/.env
!/requirements.txt
!/requirements-dev.txt
__pycache__/
*.py[cod]
*$py.class
*.so
.Python
build/
develop-eggs/
dist/
downloads/
eggs/
.eggs/
lib/
lib64/
parts/
sdist/
var/
wheels/
share/python-wheels/
*.egg-info/
.installed.cfg
*.egg
MANIFEST
*.manifest
*.spec
pip-log.txt
pip-delete-this-directory.txt
htmlcov/
.tox/
.nox/
.coverage
.coverage.*
.cache
nosetests.xml
coverage.xml
*.cover
*.py,cover
.hypothesis/
.pytest_cache/
cover/
*.mo
*.pot
*.log
local_settings.py
db.sqlite3
db.sqlite3-journal
instance/
.webassets-cache
.scrapy
docs/_build/
.pybuilder/
target/
.ipynb_checkpoints
profile_default/
ipython_config.py
__pypackages__/
celerybeat-schedule
celerybeat.pid
*.sage.py
.env
.venv
env/
venv/
ENV/
env.bak/
venv.bak/
.spyderproject
.spyproject
.ropeproject
/site
.mypy_cache/
.dmypy.json
dmypy.json
.pyre/
.pytype/

cython_debug/
!/cdk.json
/cdk.out/
.cdk.staging/
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "projen",
        "type": "devenv",
        "version": "99.99.99",
      },
      Object {
        "name": "pytest",
        "type": "devenv",
        "version": "6.2.1",
      },
      Object {
        "name": "aws_prototyping_sdk",
        "type": "runtime",
      },
      Object {
        "name": "aws-cdk-lib",
        "type": "runtime",
        "version": "^2.0.0",
      },
      Object {
        "name": "constructs",
        "type": "runtime",
        "version": "^10.0.5",
      },
      Object {
        "name": "pyhumps",
        "type": "runtime",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "cdk.json",
      "requirements-dev.txt",
      "requirements.txt",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "env": Object {
      "PATH": "$(echo $PWD/.env/bin:$PATH)",
      "VIRTUAL_ENV": "$(echo $PWD/.env)",
    },
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "clobber": Object {
        "condition": "git diff --exit-code > /dev/null",
        "description": "hard resets to HEAD of origin and cleans the local repo",
        "env": Object {
          "BRANCH": "$(git branch --show-current)",
        },
        "name": "clobber",
        "steps": Array [
          Object {
            "exec": "git checkout -b scratch",
            "name": "save current HEAD in \\"scratch\\" branch",
          },
          Object {
            "exec": "git checkout $BRANCH",
          },
          Object {
            "exec": "git fetch origin",
            "name": "fetch latest changes from origin",
          },
          Object {
            "exec": "git reset --hard origin/$BRANCH",
            "name": "hard reset to origin commit",
          },
          Object {
            "exec": "git clean -fdx",
            "name": "clean all untracked files",
          },
          Object {
            "say": "ready to rock! (unpushed commits are under the \\"scratch\\" branch)",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "python .projenrc.py",
          },
        ],
      },
      "deploy": Object {
        "description": "Deploys your CDK app to the AWS cloud",
        "name": "deploy",
        "steps": Array [
          Object {
            "exec": "cdk deploy",
          },
        ],
      },
      "destroy": Object {
        "description": "Destroys your cdk app in the AWS cloud",
        "name": "destroy",
        "steps": Array [
          Object {
            "exec": "cdk destroy",
          },
        ],
      },
      "diff": Object {
        "description": "Diffs the currently deployed app against your code",
        "name": "diff",
        "steps": Array [
          Object {
            "exec": "cdk diff",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "install": Object {
        "description": "Install and upgrade dependencies",
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
        "steps": Array [
          Object {
            "spawn": "synth:silent",
          },
        ],
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "synth": Object {
        "description": "Synthesizes your cdk app into cdk.out",
        "name": "synth",
        "steps": Array [
          Object {
            "exec": "cdk synth",
          },
        ],
      },
      "synth:silent": Object {
        "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of \\"yarn build\\")",
        "name": "synth:silent",
        "steps": Array [
          Object {
            "exec": "cdk synth -q",
          },
        ],
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
      "watch": Object {
        "description": "Watches changes in your source code and rebuilds and deploys to the current account",
        "name": "watch",
        "steps": Array [
          Object {
            "exec": "cdk deploy --hotswap",
          },
          Object {
            "exec": "cdk watch",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "cdk.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "app": "python with_context/pipeline.py",
    "context": Object {
      "sonarqubeScannerConfig": Object {
        "preArchiveCommands": Array [
          "echo here",
        ],
        "sonarqubeAuthorizedGroup": "group",
        "sonarqubeDefaultProfileOrGateName": "default",
        "sonarqubeEndpoint": "https://my.endpoint",
        "sonarqubeProjectName": "WithContext",
        "sonarqubeSpecificProfileOrGateName": "specific",
        "sonarqubeTags": Array [
          "sample",
        ],
      },
    },
    "output": "cdk.out",
    "watch": Object {
      "exclude": Array [
        "README.md",
        "cdk*.json",
        "requirements*.txt",
        "source.bat",
        "**/__init__.py",
        "python/__pycache__",
        "tests",
      ],
      "include": Array [
        "**",
      ],
    },
  },
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
projen==99.99.99
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws_prototyping_sdk
aws-cdk-lib>=2.0.0, <3.0.0
constructs>=10.0.5, <11.0.0
pyhumps
",
  "tests/__init__.py": "",
  "tests/test_pipeline.py": "import pytest
from aws_cdk import App
from aws_cdk.assertions import Template

from with_context.pipeline_stack import PipelineStack

@pytest.fixture(scope='module')
def template():
  app = App()
  stack = PipelineStack(app, \\"pipeline-stack-test\\")
  template = Template.from_stack(stack)
  yield template

def test_pipeline_found(template):
  template.resource_count_is(\\"AWS::CodePipeline::Pipeline\\", 1)
",
  "with_context/application_stack.py": "from aws_cdk import Stack

class ApplicationStack(Stack):
    def __init__(self, scope, id, **kwargs):
        super().__init__(scope, id, **kwargs)

        # TODO: Add resources
",
  "with_context/application_stage.py": "from aws_cdk import Stage

from application_stack import ApplicationStack

class ApplicationStage(Stage):
    def __init__(self, scope, id, **kwargs):
        super().__init__(scope, id, **kwargs)

        ApplicationStack(self, 'MyApplication')
",
  "with_context/pipeline.py": "import os
from aws_cdk import App, Environment
from pipeline_stack import PipelineStack
from application_stage import ApplicationStage

app = App()

pipelineStack = PipelineStack(app, \\"PipelineStack\\", env=Environment(
    account=os.environ[\\"CDK_DEFAULT_ACCOUNT\\"],
    region=os.environ[\\"CDK_DEFAULT_REGION\\"]
))

devStage = ApplicationStage(app, \\"Dev\\", env=Environment(
    account=os.environ[\\"CDK_DEFAULT_ACCOUNT\\"],
    region=os.environ[\\"CDK_DEFAULT_REGION\\"]
))

pipelineStack.pipeline.add_stage(devStage)

# Add additional stages here i.e. Prod

app.synth()
",
  "with_context/pipeline_stack.py": "from aws_prototyping_sdk.aws_pdk_pipeline import PDKPipeline, SonarCodeScannerConfig
from aws_cdk import Stack, pipelines
import json
import humps

class PipelineStack(Stack):
    def __init__(self, scope, id, **kwargs):
        super().__init__(scope, id, **kwargs)

        context = self.node.try_get_context(\\"sonarqubeScannerConfig\\")
        repo_name = self.node.try_get_context(\\"repositoryName\\")
        sonar_config = None

        if repo_name is None:
            repo_name = \\"monorepo\\"

        if context is not None:
            sonar_config = SonarCodeScannerConfig(**json.loads(json.dumps(humps.decamelize(context))))

        self.pipeline = PDKPipeline(self, \\"Pipeline\\",
                                                 primary_synth_directory=\\"packages/infra/cdk.out\\",
                                                 repository_name=repo_name,
                                                 publish_assets_in_parallel=False,
                                                 cross_account_keys=True,
                                                 sonar_code_scanner_config=sonar_config,
                                                 synth=pipelines.ShellStep(\\"Unused\\", commands=[]))
",
}
`;

exports[`PDK Pipeline Py Unit Tests projenrc synth correctly 1`] = `
"from aws_prototyping_sdk.aws_pdk_pipeline import PDKPipelinePyProject

project = PDKPipelinePyProject(
    author_email=\\"test@test.com\\",
    author_name=\\"test\\",
    module_name=\\"defaults\\",
    version=\\"0.0.0\\",
    cdk_version=\\"2.0.0\\",
    name=\\"ProjenRc\\",
)

project.synth()"
`;
